deploy/kyverno/policies/require-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  validationFailureAction: Audit
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - ecommerce-dev
                - ecommerce-prod
      verifyImages:
        - imageReferences:
            - "harbor.example.com/ecommerce/*"
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      REPLACE_WITH_COSIGN_PUBLIC_KEY
                      -----END PUBLIC KEY-----
